<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="150dp"
    android:padding="6dip"
    android:id="@+id/parent_layout">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="102dp"
        android:layout_height="144dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/todo"
        android:layout_marginEnd="6dip" />

    <TextView
        android:id="@+id/secondLine"
        android:layout_width="290dp"
        android:layout_height="66dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="7dp"
        android:layout_toRightOf="@id/icon"
        android:ellipsize="marquee"
        android:fontFamily="@font/eagle_lake"
        android:gravity="center|top"
        android:shadowColor="#0C37DD25"
        android:singleLine="false"
        android:text="@string/description"
        android:textColor="#BF000000"
        android:textColorHighlight="#09F82222"
        android:textColorHint="#0FFFFFFF"
        android:textColorLink="#0B0000"
        android:textSize="12sp"
        tools:ignore="EllipsizeMaxLines"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="7dp"
        android:layout_toEndOf="@id/icon" />

    <TextView
        android:id="@+id/firstLine"
        android:layout_width="290dp"
        android:layout_height="53dp"
        android:layout_alignWithParentIfMissing="true"
        android:layout_above="@id/secondLine"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@id/icon"
        android:fontFamily="@font/trade_winds"
        android:gravity="center|center_vertical"
        android:text="@string/title"
        android:textColor="#CC013760"
        android:textSize="16sp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="7dp"
        android:layout_toEndOf="@id/icon" />

</RelativeLayout>