<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/trade_winds"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_picture" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="185dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/eagle_lake"
        android:gravity="center_horizontal|top"
        android:singleLine="false"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_description" />


    <ImageView
        android:id="@+id/movie_picture"
        android:layout_width="142dp"
        android:layout_height="205dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exmaple_mp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/m_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/trade_winds"
        android:text="@string/title"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/movie_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/eagle_lake"
        android:gravity="center|center_horizontal"
        android:singleLine="false"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/m_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/m_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/trade_winds"
        android:text="@string/director"
        android:textSize="12dp"
        app:layout_constraintStart_toEndOf="@+id/movie_picture"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/director"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/eagle_lake"
        android:singleLine="false"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/m_director"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/m_producer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/trade_winds"
        android:text="@string/producer"
        android:textSize="12dp"
        app:layout_constraintStart_toEndOf="@+id/movie_picture"
        app:layout_constraintTop_toBottomOf="@+id/director" />

    <TextView
        android:id="@+id/producer"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/eagle_lake"
        android:singleLine="false"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/m_producer"
        app:layout_constraintTop_toBottomOf="@+id/director" />

    <TextView
        android:id="@+id/m_composer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/trade_winds"
        android:text="@string/composer"
        android:textSize="12dp"
        app:layout_constraintStart_toEndOf="@+id/movie_picture"
        app:layout_constraintTop_toBottomOf="@+id/producer" />

    <TextView
        android:id="@+id/m_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/trade_winds"
        android:text="@string/description"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro" />

    <TextView
        android:id="@+id/m_trailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/trade_winds"
        android:text="@string/trailer"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/composer"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/eagle_lake"
        android:singleLine="false"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/m_composer"
        app:layout_constraintTop_toBottomOf="@+id/producer" />

    <VideoView
        android:id="@+id/trailer"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_trailer" />

</androidx.constraintlayout.widget.ConstraintLayout>